Commit 14: Added Nick's Face to the Canvas + Fixed Rules Div Visibility

--- a/style_css/int_treasure_style.css
+++ b/style_css/int_treasure_style.css
@@ -1,20 +1,44 @@
 body{
 	background-color: #B28C6B;
+	font-family: 'Goudy Bookletter 1911', serif;
+}
+
+.topAndBottom {
+	display: flex;
+	flex-direction: column;
+}
+
+.top {
+	display: flex;
+	margin-left: auto;
+	margin-right: auto;
+	justify-content: space-around;
+}
+
+.bottom {
+	width: 90%;
+	height: 200px;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 #my-canvas {
 	background-image: url("https://i.imgur.com/rDWs2S1.png");
-	border: 2.5px solid black;
+	border: 2px solid black;
 	width: 70%;
 	height: 450px;
 
 }
 
-.container1 {
-	display: flex;
+
+#rules{
+	background-color: white;
+	border: 2px solid black;
 	margin-left: auto;
 	margin-right: auto;
-	justify-content: space-around;
+	height: 100px;
+	margin-top: 15px;
+	width: 70%;
 }
 
 
@@ -22,7 +46,7 @@ body{
 /*	background-color: white;
 	border: 2.5px solid black;*/
 	width: 20%;
-	height: 445px;
+	height: 450px;
 	display: flex;
 	flex-direction: column;
 }
@@ -30,17 +54,17 @@ body{
 #stats {
 	padding: 5px;
 	background-color: white;
-	border: 1px solid black;
+	border: 2px solid black;
 	height: 60%;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-around;
 }
 
-.buttons {
+#buttons {
 	display: flex;
 	flex-direction: column;
-	justify-content: space-around;
+	justify-content: space-between;
 	height: 39%;
 	padding-top: 10px;
 }
